--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.3",
     "cra-template": "1.2.0",
+    "firebase": "^11.3.1",
     "framer-motion": "^12.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
